--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-<head></head>
-<body>
-    <h1>Wilkomenn</h1>
-    <p>lorem ipsulum</p>
+    <head>
+    </head>
+    <body>
+        <h1>Wilkomenn</h1>
+        <p>lorem ipsulum</p>
         <p>fabin alterando</p>
 
-</body>
+    </body>
 </html>
