--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-<head></head>
-<body>
-    <h1>Wilkomenn</h1>
-    <h2>jambo da galera</h2>
-    <p>lorem ipsulum</p>
+    <head>
+        <link href="estilos.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>Wilkomenn</h1>
+        <h2>jambo da galera</h2>
+        <p>lorem ipsulum</p>
         <p>fabin alterando</p>
 
-</body>
+    </body>
 </html>
