--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
         <link href="estilos.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Wilkomenn</h1>
-        <h2>jambo da galera</h2>
-        <p>lorem ipsulum</p>
-        <p>fabin alterando</p>
-
+        <h1>Wilkomenn!!</h1>
+        <h2>jambo da galera !!</h2>
     </body>
 </html>
